# isaensible

./: .env.example  .gitignore  README.md  fetch_xterm.sh  hosts.txt  pyproject.toml  requirements.txt
app/: cli.py  config.py  main.py  models.py  paths.py
app/routers/: hosts.py  terminal.py
app/services/: hosts.py  metrics.py  notes.py  ping.py  ssh.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  filebrowser.html  index.html  multi_terminal.html  terminal.html
