[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isaensible"
version = "0.1.0"
description = "Web dashboard for managing a cluster of Ubuntu servers"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "asyncssh>=2.14.2",
    "pydantic-settings>=2.2.1",
]

[project.scripts]
isaensible = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"app/static" = "app/static"
